--- a/src/components/shared/Button/style.module.css
+++ b/src/components/shared/Button/style.module.css
@@ -10,5 +10,4 @@
 	-o-border-radius: 4px;
 	outline: none;
 	cursor: pointer;
-	text-transform: capitalize;
 }
